{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 21,
  "lineage": "d356015d-9d03-85a7-5ce9-19cdd6297be4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059cb01d03d8fe57e",
            "association_id": "eipassoc-061a8c2579ce56299",
            "domain": "vpc",
            "id": "eipalloc-059cb01d03d8fe57e",
            "instance": "i-0bf64c8c3d8eaa33c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a9e9c6b6ad04a23e",
            "private_dns": "ip-10-10-10-18.ec2.internal",
            "private_ip": "10.10.10.18",
            "public_dns": "ec2-18-235-251-118.compute-1.amazonaws.com",
            "public_ip": "18.235.251.118",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nginx_public_1",
            "aws_key_pair.devops",
            "aws_security_group.nginx",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b7bd05ec9482c2b",
            "domain": "vpc",
            "id": "eipalloc-03b7bd05ec9482c2b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-206-182.compute-1.amazonaws.com",
            "public_ip": "174.129.206.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-Gateway-EIP"
            },
            "tags_all": {
              "Name": "NAT-Gateway-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:202812758068:instance/i-080e12dd26207aadb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080e12dd26207aadb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05faa38555532363b",
            "private_dns": "ip-10-10-10-210.ec2.internal",
            "private_ip": "10.10.10.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05817c8ec520ccf2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac4f824bac1161d0",
            "tags": {
              "Name": "NGINX-ec2-Private"
            },
            "tags_all": {
              "Name": "NGINX-ec2-Private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f49fb07abb6fbc4"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops",
            "aws_security_group.nginx",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc_demo",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:202812758068:instance/i-0bf64c8c3d8eaa33c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf64c8c3d8eaa33c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9e9c6b6ad04a23e",
            "private_dns": "ip-10-10-10-18.ec2.internal",
            "private_ip": "10.10.10.18",
            "public_dns": "ec2-34-207-218-158.compute-1.amazonaws.com",
            "public_ip": "34.207.218.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb753d5455d0d60b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0413019b2d7ff1573",
            "tags": {
              "Name": "Nginx-01-public"
            },
            "tags_all": {
              "Name": "Nginx-01-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f49fb07abb6fbc4"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops",
            "aws_security_group.nginx",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:202812758068:instance/i-096f2c19f7b95fac9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096f2c19f7b95fac9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9a89c21b94ecc18",
            "private_dns": "ip-10-10-10-152.ec2.internal",
            "private_ip": "10.10.10.152",
            "public_dns": "ec2-3-218-241-202.compute-1.amazonaws.com",
            "public_ip": "3.218.241.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3c2667d07bb1802",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd842ce3742406b4",
            "tags": {
              "Name": "Nginx-02-public"
            },
            "tags_all": {
              "Name": "Nginx-02-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb7631529547b290"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops",
            "aws_security_group.ssh-security-group",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:internet-gateway/igw-0aa2b806c8fd21ce7",
            "id": "igw-0aa2b806c8fd21ce7",
            "owner_id": "202812758068",
            "tags": {
              "Name": "Internet-Gateway-demo"
            },
            "tags_all": {
              "Name": "Internet-Gateway-demo"
            },
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b7bd05ec9482c2b",
            "connectivity_type": "public",
            "id": "nat-01dc8440ac23490d9",
            "network_interface_id": "eni-09d386718ab6310a3",
            "private_ip": "10.10.10.12",
            "public_ip": "174.129.206.182",
            "subnet_id": "subnet-0413019b2d7ff1573",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:route-table/rtb-00a961c26c12e782f",
            "id": "rtb-00a961c26c12e782f",
            "owner_id": "202812758068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa2b806c8fd21ce7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fae4565721e22305",
            "route_table_id": "rtb-00a961c26c12e782f",
            "subnet_id": "subnet-0413019b2d7ff1573"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f64ee8398283f79",
            "route_table_id": "rtb-00a961c26c12e782f",
            "subnet_id": "subnet-0cd842ce3742406b4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:security-group/sg-08f49fb07abb6fbc4",
            "description": "MyServer-terraform Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f49fb07abb6fbc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx_access",
            "name_prefix": "",
            "owner_id": "202812758068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NGINX Security Group"
            },
            "tags_all": {
              "Name": "NGINX Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:security-group/sg-0eb7631529547b290",
            "description": "Enable SSH Access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb7631529547b290",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "202812758068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-Security-Group"
            },
            "tags_all": {
              "Name": "SSH-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:security-group/sg-0a7245e02528f39fa",
            "description": "Enable HTTP/HTTPS access on Port 80/443 and SSH Port 22 via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7245e02528f39fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f49fb07abb6fbc4"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f49fb07abb6fbc4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb7631529547b290"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Server Access",
            "name_prefix": "",
            "owner_id": "202812758068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-Server-Security-Group"
            },
            "tags_all": {
              "Name": "Web-Server-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:subnet/subnet-0ac4f824bac1161d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac4f824bac1161d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202812758068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:subnet/subnet-0413019b2d7ff1573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413019b2d7ff1573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202812758068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:subnet/subnet-0cd842ce3742406b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd842ce3742406b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202812758068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-05b185d5cd8c77e32"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202812758068:vpc/vpc-05b185d5cd8c77e32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-0c73ce38d856a8f1f",
            "default_route_table_id": "rtb-02f9da517393808a9",
            "default_security_group_id": "sg-0d53d3151794378cd",
            "dhcp_options_id": "dopt-0a3d3da1bdb9dab31",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05b185d5cd8c77e32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f9da517393808a9",
            "owner_id": "202812758068",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}